--- a/app/src/main/res/layout/dialog_show_note.xml
+++ b/app/src/main/res/layout/dialog_show_note.xml
@@ -7,6 +7,8 @@
         android:id="@+id/imageViewImportant"
         android:src="@drawable/ic_warning_black_24dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -32,8 +34,9 @@
         android:id="@+id/txtTitle"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_below="@id/imageViewIdea"
+       android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
