--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,12 +7,15 @@
         android:id="@+id/imageViewImportant"
         android:src="@drawable/ic_warning_black_24dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/imageViewTodo"
         android:src="@drawable/ic_check_box_outline_blank_black_24dp"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/imageViewImportant"
         android:layout_toEndOf="@id/imageViewImportant"
         android:layout_width="wrap_content"
@@ -21,6 +24,7 @@
     <ImageView
         android:id="@+id/imageViewIdea"
         android:src="@drawable/ic_wb_incandescent_black_24dp"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/imageViewTodo"
         android:layout_toEndOf="@id/imageViewTodo"
         android:layout_width="wrap_content"
@@ -30,9 +34,10 @@
         android:id="@+id/txtTitle"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/imageViewIdea"
+        android:layout_marginTop="22dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
